// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test case "args-changed" 1`] = `
{
  "messages": [
    "[function-params-and-return-type-changed] Function "acceptsValue": parameter "data" of type "number" has been changed to "{ count: number; }"",
  ],
  "minChangeType": "major",
}
`;

exports[`Test case "args-narrowed" 1`] = `
{
  "messages": [
    "[function-params-and-return-type-changed] Function "acceptsValue": parameter "data" of type "string | number" has been changed to "number"",
  ],
  "minChangeType": "major",
}
`;

exports[`Test case "args-newly-required" 1`] = `
{
  "messages": [
    "[function-params-and-return-type-changed] Function "myFunction": parameter "newlyRequired" has been added as required",
  ],
  "minChangeType": "major",
}
`;

exports[`Test case "returns-widened" 1`] = `
{
  "messages": [
    "[function-params-and-return-type-changed] Function "getValue": return type "string" has been widened to "string | null"",
  ],
  "minChangeType": "major",
}
`;
